--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+body{
+  background-color: #07E1CF;
+}
+
 
 div.mes {
   margin: 0 auto;
@@ -17,25 +21,25 @@ div.mes th,
 div.mes td,
 div.mes caption {
   font: normal 13px "Helvetica Neue", Helvetica, Arial, sans-serif;
-  padding: 6px 4px;
+  padding: 8px 4px;
 }
 
 .tabla_mes {
-  border-spacing: 3px;
+  border-spacing: 4px;
   empty-cells: hide;
 }
 
 div.mes td {
   text-align: center;
-  border: 1px solid #eee;
+  border: 1px solid #090751;
 }
 
 div.mes th {
-  color: #999;
+  color: #F50AAA;
 }
 
 div.mes caption.titulo {
-  text-align: left;
+  text-align: center;
   font-size: 18px;
-  color: #c00;
+  color:#240DB3;
 }
